--- a/sessie_1/sessie_1/sessie_1.cbp
+++ b/sessie_1/sessie_1/sessie_1.cbp
@@ -11,7 +11,7 @@
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
-				<Option parameters='--image=&quot;/home/student/Github/2018_labo_beeldinterpretatie_VanDelm_Josse/sessie_1/imageColor.jpg&quot; --mode=0' />
+				<Option parameters='--image=&quot;/home/jossevandelm/beeldinterpretatie/2018_labo_beeldinterpretatie_VanDelm_Josse/sessie_1/imageColorAdapted.jpg&quot; --mode=2' />
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
@@ -36,6 +36,9 @@
 			<Add option="-Wall" />
 			<Add option="-fexceptions" />
 		</Compiler>
+		<Linker>
+			<Add option="`pkg-config opencv --libs`" />
+		</Linker>
 		<Unit filename="main.cpp" />
 		<Extensions>
 			<code_completion />
