--- a/sessie_6/sessie_6_1/sessie_6_1.cbp
+++ b/sessie_6/sessie_6_1/sessie_6_1.cbp
@@ -11,9 +11,13 @@
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
+				<Option parameters='--video=&quot;/media/josse/Fedora/home/jossevandelm/beeldinterpretatie/2018_labo_beeldinterpretatie_VanDelm_Josse/sessie_6/people.mp4&quot;' />
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
+				<Linker>
+					<Add option="`pkg-config opencv --libs`" />
+				</Linker>
 			</Target>
 			<Target title="Release">
 				<Option output="bin/Release/sessie_6_1" prefix_auto="1" extension_auto="1" />
